--- a/2D/index.html
+++ b/2D/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>3D Functions</title>
+    <title>2D Function Visualizer</title>
 
     <link rel="stylesheet" href="style.css">
     <script src="canvas.js" defer>Fallback</script>
