added input box 🔢

--- a/2D/index.html
+++ b/2D/index.html
@@ -12,5 +12,6 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
+    <input type="text" placeholder="type function here" value="Math.cos(x)" class="function-input"></input>
 </body>
 </html>
