--- a/2D/index.html
+++ b/2D/index.html
@@ -8,10 +8,11 @@
     <title>2D Function Visualizer</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.2.5/math.min.js" defer></script>
     <script src="canvas.js" defer>Fallback</script>
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <input type="text" placeholder="type function here" value="Math.cos(x)" class="function-input"></input>
+    <input type="text" placeholder="type function here" value="cos(x)" class="function-input"></input>
 </body>
 </html>
