--- a/2D/index.html
+++ b/2D/index.html
@@ -13,6 +13,9 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <input type="text" placeholder="type function here" value="cos(x)" class="function-input"></input>
+    <div id="plot-inputs">
+        <input type="text" placeholder="type function here" class="function-input"></input>
+    </div>
+    <button onclick="newPlot()">+</button>
 </body>
 </html>
