--- a/2D/index.html
+++ b/2D/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <div id="plot-inputs">
-        <input type="text" placeholder="type function here" class="function-input"></input>
+    <div id="HUD">
+        <div id="plot-inputs"></div>
+        <button class="ui" onclick="newPlot()">+</button>
     </div>
-    <button onclick="newPlot()">+</button>
 </body>
 </html>
