--- a/2D/index.html
+++ b/2D/index.html
@@ -8,13 +8,25 @@
     <title>2D Function Visualizer</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.2.5/math.min.js" defer></script>
     <script src="canvas.js" defer>Fallback</script>
 </head>
 <body>
     <canvas id="canvas"></canvas>
     <div id="HUD">
-        <div id="plot-inputs"></div>
+        <div id="plot-inputs">
+            <div class="function-options">
+                <input type="text" placeholder="type function here" class="function-input ui">
+                <button class="ui">
+                    <i class="fas fa-eye"></i>
+                </button>
+                <button class="ui">
+                    <i class="fas fa-minus"></i>
+                </button>
+                <input class="ui" type="color">
+            </div>
+        </div>
         <button class="ui" onclick="newPlot()">+</button>
     </div>
 </body>
