--- a/2D/index.html
+++ b/2D/index.html
@@ -15,18 +15,7 @@
 <body>
     <canvas id="canvas"></canvas>
     <div id="HUD">
-        <div id="plot-inputs">
-            <div class="function-options">
-                <input type="text" placeholder="type function here" class="function-input ui">
-                <button class="ui">
-                    <i class="fas fa-eye"></i>
-                </button>
-                <button class="ui">
-                    <i class="fas fa-minus"></i>
-                </button>
-                <input class="ui" type="color">
-            </div>
-        </div>
+        <div id="plot-inputs"></div>
         <button class="ui" onclick="newPlot()">+</button>
     </div>
 </body>
