--- a/2D/index.html
+++ b/2D/index.html
@@ -16,7 +16,9 @@
     <canvas id="canvas"></canvas>
     <div id="HUD">
         <div id="plot-inputs"></div>
-        <button class="ui" onclick="newPlot()">+</button>
+        <button class="ui" onclick="newPlot()">
+            <i class="fas fa-plus"></i>
+        </button>
     </div>
 </body>
 </html>
