--- a/2D/index.html
+++ b/2D/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.2.5/math.min.js" defer></script>
     <script src="canvas.js" defer>Fallback</script>
+    <script src="../common.js" defer>Fallback</script>
 </head>
 <body>
     <canvas id="canvas"></canvas>
